--- a/alembic.ini
+++ b/alembic.ini
@@ -35,7 +35,7 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+psycopg2://postgres:password@postgres/postgres
+# sqlalchemy.url = postgresql+psycopg2://postgres:password@postgres/postgres
 
 
 
