--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,8 @@ variables:
 steps:
 - script: docker build -f Dockerfile -t $(imageName) .
   displayName: 'docker build'
+- script: docker run $(imageName) sh -c "poetry install -n && poetry run python -m pytest"
+  displayName: 'docker test'
 - script: |
     docker login -u "$(dockerId)" -p "$(dockerPswd)" 
     docker push $(imageName) 
