--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
 
     flask_shorten:
         restart: always
-        command: poetry run python run.py
+        command: poetry run gunicorn -w 4 -b 0.0.0.0:5000 run:app --access-logfile - # python run.py
         volumes:
             - ./:/flask_shorten
         build:
