--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ psycopg2 = "^2.7"
 alembic = "^1.0"
 flask-rest-api = "^0.14.0"
 shortuuid = "^0.5.0"
+gunicorn = "^19.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.3"
