Added mypy to the tests

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ gunicorn = "==19.9"
 pytest = "*"
 ipython = "*"
 flask-shell-ipython = "*"
+pytest-mypy = "*"
+sqlalchemy-stubs = "*"
 
 [requires]
 python_version = "3.7"
