--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,9 @@ ipython = "*"
 flask-shell-ipython = "*"
 pytest-mypy = "*"
 sqlalchemy-stubs = "*"
+black = "==18.9b0"
+pre-commit = "*"
+
 
 [requires]
 python_version = "3.7"
