--- a/Pipfile
+++ b/Pipfile
@@ -20,7 +20,7 @@ pytest-mypy = "*"
 sqlalchemy-stubs = "*"
 black = "==18.9b0"
 pre-commit = "*"
-
+flake8 = "*"
 
 [requires]
 python_version = "3.7"
