--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ alembic = "==1.0"
 flask-rest-api = "==0.14.0"
 shortuuid = "==0.5.0"
 gunicorn = "==19.9"
+sentry-sdk = {extras = ["flask"],version = "==0.9.5"}
 
 [dev-packages]
 pytest = "*"
