--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ flask-rest-api = "==0.14.0"
 shortuuid = "==0.5.0"
 gunicorn = "==19.9"
 sentry-sdk = {extras = ["flask"],version = "==0.9.5"}
+flask-talisman = "*"
 
 [dev-packages]
 pytest = "*"
